--- a/BDP.Infrastructure.Services/BDP.Infrastructure.Services.csproj
+++ b/BDP.Infrastructure.Services/BDP.Infrastructure.Services.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BDP.Domain.Services.Interfaces\BDP.Domain.Services.Interfaces.csproj" />
+    <ProjectReference Include="..\BDP.Domain.Services.Interfaces\BDP.Domain.Services.csproj" />
     <ProjectReference Include="..\BDP.Shared.Interfaces\BDP.Domain.Repositories.csproj" />
   </ItemGroup>
 
