--- a/BDP.Web.Dtos/BDP.Web.Dtos.csproj
+++ b/BDP.Web.Dtos/BDP.Web.Dtos.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BDP.Domain.Services.Interfaces\BDP.Domain.Services.Interfaces.csproj" />
+    <ProjectReference Include="..\BDP.Domain.Services.Interfaces\BDP.Domain.Services.csproj" />
   </ItemGroup>
 
 </Project>
