--- a/BDP.Web.Api/BDP.Web.Api.csproj
+++ b/BDP.Web.Api/BDP.Web.Api.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     <PackageReference Include="Winista.MimeDetect" Version="1.0.1" />
   </ItemGroup>
 
