Update testing utilities tests project dependencies

--- a/BDP.Tests.Util.Tests/BDP.Tests.Util.Tests.csproj
+++ b/BDP.Tests.Util.Tests/BDP.Tests.Util.Tests.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BDP.Tests.Util\BDP.Tests.Util.csproj" />
+  </ItemGroup>
+
 </Project>
