--- a/BDP.Infrastructure.Services/BDP.Infrastructure.Services.csproj
+++ b/BDP.Infrastructure.Services/BDP.Infrastructure.Services.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.0" />
     <PackageReference Include="Winista.MimeDetect" Version="1.0.1" />
   </ItemGroup>
 
