--- a/BDP.Domain.Services.Interfaces/BDP.Domain.Services.csproj
+++ b/BDP.Domain.Services.Interfaces/BDP.Domain.Services.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BDP.Domain.Entities\BDP.Domain.Entities.csproj" />
-    <ProjectReference Include="..\BDP.Shared.Interfaces\BDP.Domain.Repositories.csproj" />
+    <ProjectReference Include="..\BDP.Domain.Repositories\BDP.Domain.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
