--- a/BDP.Infrastructure.Repositories.EntityFramework/BDP.Infrastructure.Repositories.EntityFramework.csproj
+++ b/BDP.Infrastructure.Repositories.EntityFramework/BDP.Infrastructure.Repositories.EntityFramework.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -20,7 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BDP.Domain.Entities.Validators\BDP.Domain.Entities.Validators.csproj" />
     <ProjectReference Include="..\BDP.Domain.Entities\BDP.Domain.Entities.csproj" />
-    <ProjectReference Include="..\BDP.Shared.Interfaces\BDP.Domain.Repositories.csproj" />
+    <ProjectReference Include="..\BDP.Domain.Repositories\BDP.Domain.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
