Configure Azure hosting

--- a/BDP.Web.Api/appsettings.json
+++ b/BDP.Web.Api/appsettings.json
@@ -19,7 +19,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BDP;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:voidd.database.windows.net,1433;Initial Catalog=bdp;Persist Security Info=False;User ID=void;Password=711327884A!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "SmtpSettings": {
