--- a/BDP.Web.Api/BDP.Web.Api.csproj
+++ b/BDP.Web.Api/BDP.Web.Api.csproj
@@ -1,41 +1,42 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+	<TargetFramework>net6.0</TargetFramework>
+	<Nullable>enable</Nullable>
+	<ImplicitUsings>enable</ImplicitUsings>
+	  <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="11.0.1" />
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
-    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-    <PackageReference Include="Winista.MimeDetect" Version="1.0.1" />
+	<PackageReference Include="AutoMapper" Version="11.0.1" />
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.3" />
+	<PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.4" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
+	  <PrivateAssets>all</PrivateAssets>
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.3" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
+	  <PrivateAssets>all</PrivateAssets>
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
+	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
+	<PackageReference Include="System.Linq.Async" Version="6.0.1" />
+	<PackageReference Include="Winista.MimeDetect" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BDP.Application.App\BDP.Application.App.csproj" />
-    <ProjectReference Include="..\BDP.Domain.Services.Interfaces\BDP.Domain.Services.csproj" />
-    <ProjectReference Include="..\BDP.Infrastructure.Repositories.EntityFramework\BDP.Infrastructure.Repositories.EntityFramework.csproj" />
-    <ProjectReference Include="..\BDP.Infrastructure.Services\BDP.Infrastructure.Services.csproj" />
-    <ProjectReference Include="..\BDP.Web.Dtos\BDP.Web.Dtos.csproj" />
+	<ProjectReference Include="..\BDP.Application.App\BDP.Application.App.csproj" />
+	<ProjectReference Include="..\BDP.Domain.Services.Interfaces\BDP.Domain.Services.csproj" />
+	<ProjectReference Include="..\BDP.Infrastructure.Repositories.EntityFramework\BDP.Infrastructure.Repositories.EntityFramework.csproj" />
+	<ProjectReference Include="..\BDP.Infrastructure.Services\BDP.Infrastructure.Services.csproj" />
+	<ProjectReference Include="..\BDP.Web.Dtos\BDP.Web.Dtos.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\uploads\" />
+	<Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
 </Project>
