--- a/BDP.Web.Api/appsettings.json
+++ b/BDP.Web.Api/appsettings.json
@@ -27,7 +27,7 @@
     "Port": 465,
     "EnableSSL": true,
     "Username": "devel.void@gmail.com",
-    "Password": "711327884"
+    "Password": "kkwjgijyfhcbnoeo"
   },
 
   "AuthSettings": {
