--- a/BDP.Web.Api/appsettings.json
+++ b/BDP.Web.Api/appsettings.json
@@ -24,10 +24,10 @@
 
   "SmtpSettings": {
     "Host": "smtp.gmail.com",
-    "Port": 465,
+    "Port": 587,
     "EnableSSL": true,
     "Username": "devel.void@gmail.com",
-    "Password": "711327884"
+    "Password": "kkwjgijyfhcbnoeo"
   },
 
   "AuthSettings": {
